feat: add left side CV about block

--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="left_side">
+            <div class="img_person">
+                <img src="./IMG_0607.jpeg" alt="img_person">
+            </div>
+            <div class="skills">
+                <h2>Skills and Proficiency:</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>REACT</li>
+                    <li>JQUERY</li>
+                    <li>GIT</li>
+                </ul>
+            </div>
+            <div class="contacts">
+                <h2>Contacts</h2>
+                <ul>
+
+                    <li>Phone: +996 (999) 71 11 01</li>
+                    <li>Email: r.toktogulov@gmail.com</li>
+                    <li>Telegram: @rtoktogulov</li>
+                </ul>
+            </div>
+        </div>
+        <div class="right_side">
+            <div class="name">
+                <h1>RUSLAN <br> TOKTOGULOV</h1>
+                <h3>FRONT-ENT REACT DEVELOPER</h3>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
