feat: add right block(about myself, experience)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,23 @@
         <div class="right_side">
             <div class="name">
                 <h1>RUSLAN <br> TOKTOGULOV</h1>
-                <h3>FRONT-ENT REACT DEVELOPER</h3>
+                <h2>Frontend React JS Developer</h2>
+            </div>
+
+            <div class="my_story">
+                <h2> My story</h2>
+                <p>I'm junior developer who wants to quickly develop in an interesting team and in a promising project. Diligent and selfless. I show these qualities in everything I do.</p>
+            </div>
+
+            <div class="experience">
+                <h2>EXPERIENCE</h2>
+                <h4>Chief of timing techlonogy My Laps systems</h4>
+                <h3>NOMADSPORT</h3>
+                <h3>APRIL 2018 - present</h3>
+                <h4>Specialist of 
+                    1C:Enterprise</h4>
+                <h3>KAINDY-KANT FACTORY</h3>
+                <h3>JANUARY 2014 - FEBRUARY 2017</h3>
             </div>
         </div>
     </div>
