fix: edit experience

--- a/index.html
+++ b/index.html
@@ -49,10 +49,25 @@
                 <h4>Chief of timing techlonogy My Laps systems</h4>
                 <h3>NOMADSPORT</h3>
                 <h3>APRIL 2018 - present</h3>
+                <ul>
+                    <li>Preparation of equipment for a sporting event.</li>
+                    <li>Assistance in organizing events</li>
+                    <li>Working with a team of timekeepers</li>
+                    <li>Site maintenance www.nomadsport.net</li>
+                    <li>Training of new employees in the My Laps timing system</li>
+                    <li>Negotiations with company partners and signing contracts.</li>
+                </ul>
                 <h4>Specialist of 
                     1C:Enterprise</h4>
                 <h3>KAINDY-KANT FACTORY</h3>
                 <h3>JANUARY 2014 - FEBRUARY 2017</h3>
+                <ul>
+                    <li>Training of accounting personnel of the 1C program</li>
+                    <li>Writing those tasks for 1C programmers.</li>
+                    <li>Testing and implementation of new features.</li>
+                    <li>Automation of the process by RFID technology for the acceptance of raw materials and control of the system.</li>
+                    <li>Maintenance of the main server (only some server functions)</li>
+                </ul>
             </div>
         </div>
     </div>
