--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <div class="contacts">
                 <h2>Contacts</h2>
                 <ul>
-
                     <li>Phone: +996 (999) 71 11 01</li>
                     <li>Email: r.toktogulov@gmail.com</li>
                     <li>Telegram: @rtoktogulov</li>
@@ -38,12 +37,10 @@
                 <h1>RUSLAN <br> TOKTOGULOV</h1>
                 <h2>Frontend React JS Developer</h2>
             </div>
-
             <div class="my_story">
                 <h2> My story</h2>
                 <p>I'm junior developer who wants to quickly develop in an interesting team and in a promising project. Diligent and selfless. I show these qualities in everything I do.</p>
             </div>
-
             <div class="experience">
                 <h2>EXPERIENCE</h2>
                 <h4>Chief of timing techlonogy My Laps systems</h4>
@@ -57,15 +54,14 @@
                     <li>Training of new employees in the My Laps timing system</li>
                     <li>Negotiations with company partners and signing contracts.</li>
                 </ul>
-                <h4>Specialist of 
-                    1C:Enterprise</h4>
+                <h4>Specialist of1C:Enterprise</h4>
                 <h3>KAINDY-KANT FACTORY</h3>
                 <h3>JANUARY 2014 - FEBRUARY 2017</h3>
                 <ul>
-                    <li>Training of accounting personnel of the 1C program</li>
+                    <li>Training of accounting personnel of the program</li>
                     <li>Writing those tasks for 1C programmers.</li>
                     <li>Testing and implementation of new features.</li>
-                    <li>Automation of the process by RFID technology for the acceptance of raw materials and control of the system.</li>
+                    <li>Automation of the process by RFID technology forthe acceptance of raw materials and control of the system.</li>
                     <li>Maintenance of the main server (only some server functions)</li>
                 </ul>
             </div>
